--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
         .factored_result {
             border: 1px solid#00ccff;
             padding: 8px;
+            margin-top: 16px;
         }
         body,input {
             font-size: 32px;
+        }
+        input {
+            max-width: 16px;
         }
         h4 {
             margin-left: 50px;
